Hide both buttons initially

--- a/index.html
+++ b/index.html
@@ -146,14 +146,14 @@
         <h2 id="title"></h2>
       </section> 
 
-      <div class="amazon">
-        <a href="" class="button is-hidden">Join Amazon Watch Party</a>
+      <div class="amazon is-hidden">
+        <a href="" class="button">Join Amazon Watch Party</a>
         
         <p>* Must be in the US and an Amazon Prime subscriber
       </div>
 
-      <div class="netflix">
-        <a href="" class="button is-hidden">Join Netflix Party</a>
+      <div class="netflix is-hidden">
+        <a href="" class="button">Join Netflix Party</a>
         
         <p>* Requires <a href="https://www.netflixparty.com/">Netflix Party</a> Chrome extension
       </div>
